# jaeb

./: .dockerignore  .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENCE  LICENSE  README.md  RUST_RULES.md  THIRD-PARTY-LICENSES  USAGE.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: comparison.rs  evno_contention.rs  throughput.rs
examples/axum-integration/: Cargo.toml  README.md
examples/axum-integration-macros/: Cargo.toml  README.md
examples/axum-integration-macros/src/: main.rs
examples/axum-integration/src/: main.rs
examples/backpressure/: Cargo.toml  README.md
examples/backpressure/src/: main.rs
examples/basic-pubsub/: Cargo.toml  README.md
examples/basic-pubsub/src/: main.rs
examples/closure-handlers/: Cargo.toml  README.md
examples/closure-handlers/src/: main.rs
examples/concurrency-limit/: Cargo.toml  README.md
examples/concurrency-limit/src/: main.rs
examples/dead-letters/: Cargo.toml  README.md
examples/dead-letters/src/: main.rs
examples/fire-once/: Cargo.toml  README.md
examples/fire-once/src/: main.rs
examples/graceful-shutdown/: Cargo.toml  README.md
examples/graceful-shutdown/src/: main.rs
examples/introspection/: Cargo.toml  README.md
examples/introspection/src/: main.rs
examples/jaeb-demo/: Cargo.toml  README.md
examples/jaeb-demo/src/: main.rs
examples/jaeb-visualizer/: Cargo.toml  README.md
examples/jaeb-visualizer/src/: app.rs  main.rs
examples/jaeb-visualizer/src/sim/: mod.rs  (+4 more)
examples/macro-handlers/: Cargo.toml  README.md
examples/macro-handlers-auto/: Cargo.toml  README.md
examples/macro-handlers-auto/src/: main.rs
examples/macro-handlers/src/: main.rs
examples/middleware/: Cargo.toml  README.md
examples/middleware/src/: main.rs
examples/observability-stack/: Cargo.toml  Dockerfile  README.md
examples/observability-stack/docker/: docker-compose.yml
examples/observability-stack/docker/grafana/provisioning/dashboards/: dashboards.yml  jaeb-overview.json
examples/observability-stack/docker/grafana/provisioning/datasources/: datasources.yml
examples/observability-stack/docker/loki/: loki-config.yml
examples/observability-stack/docker/otelcol/: otelcol-config.yml
examples/observability-stack/docker/prometheus/: prometheus.yml
examples/observability-stack/docker/tempo/: tempo-config.yml
examples/observability-stack/src/: events.rs  handlers.rs  main.rs  sim.rs  telemetry.rs
examples/panic-safety/: Cargo.toml  README.md
examples/panic-safety/src/: main.rs
examples/retry-strategies/: Cargo.toml  README.md
examples/retry-strategies/src/: main.rs
examples/subscription-lifecycle/: Cargo.toml  README.md
examples/subscription-lifecycle/src/: main.rs
examples/summer-jaeb-demo/: Cargo.toml  README.md
examples/summer-jaeb-demo/config/: app.toml
examples/summer-jaeb-demo/src/: main.rs
examples/sync-handler/: Cargo.toml  README.md
examples/sync-handler/src/: main.rs
jaeb-macros/: Cargo.toml  README.md
jaeb-macros/src/: attrs.rs  codegen.rs  lib.rs  validate.rs
jaeb-macros/tests/: trybuild.rs
jaeb-macros/tests/compile_fail/: dead_letter_async.rs  dead_letter_async.stderr  dead_letter_bus_param.rs  dead_letter_bus_param.stderr  dead_letter_method_not_free_fn.rs  dead_letter_method_not_free_fn.stderr  dead_letter_missing_event_param.rs  dead_letter_missing_event_param.stderr  dead_letter_missing_return_type.rs  dead_letter_missing_return_type.stderr  dead_letter_policy_attrs.rs  dead_letter_policy_attrs.stderr  dead_letter_wrong_first_param.rs  dead_letter_wrong_first_param.stderr  dead_letter_wrong_return_type.rs  dead_letter_wrong_return_type.stderr  handler_base_ms_without_strategy.rs  handler_base_ms_without_strategy.stderr  handler_dead_letter.rs  handler_dead_letter.stderr  handler_invalid_extra_param.rs  handler_invalid_extra_param.stderr  handler_method_not_free_fn.rs  handler_method_not_free_fn.stderr  handler_missing_event_param.rs  handler_missing_event_param.stderr  handler_missing_return_type.rs  handler_missing_return_type.stderr  handler_mutable_event_ref.rs  handler_mutable_event_ref.stderr  handler_priority_on_async.rs  handler_priority_on_async.stderr  handler_retry_on_sync.rs  handler_retry_on_sync.stderr  handler_strategy_without_retries.rs  handler_strategy_without_retries.stderr  handler_unknown_attr.rs  handler_unknown_attr.stderr  handler_wrong_return_type.rs  handler_wrong_return_type.stderr
src/: actor.rs  bus.rs  deps.rs  error.rs  event_bus.rs  handler.rs  lib.rs  macros_support.rs  metrics.rs  middleware.rs  registry.rs  subscription.rs  test_utils.rs  types.rs
src/bus/: builder.rs  publish.rs  subscribe.rs
src/registry/: dispatch.rs  mutable.rs  tracker.rs  types.rs  worker.rs
summer-jaeb/: Cargo.toml  README.md
summer-jaeb-macros/: Cargo.toml  README.md
summer-jaeb-macros/src/: attrs.rs  codegen.rs  lib.rs  validate.rs
summer-jaeb/src/: config.rs  lib.rs
summer-jaeb/tests/: trybuild.rs
summer-jaeb/tests/compile_fail/: async_dead_letter.rs  async_dead_letter.stderr  base_ms_without_strategy.rs  base_ms_without_strategy.stderr  method_not_free_fn.rs  method_not_free_fn.stderr  missing_event_param.rs  missing_event_param.stderr  missing_return_type.rs  missing_return_type.stderr  mutable_event_ref.rs  mutable_event_ref.stderr  policy_on_dead_letter.rs  policy_on_dead_letter.stderr  priority_on_async.rs  priority_on_async.stderr  retry_on_sync.rs  retry_on_sync.stderr  strategy_without_retries.rs  strategy_without_retries.stderr  unknown_attr.rs  unknown_attr.stderr  wrong_return_type.rs  wrong_return_type.stderr
tests/: backpressure.rs  builder_handlers.rs  builder_validation.rs  bus_in_handler.rs  clone.rs  closure_handlers.rs  dead_letter.rs  dispatch.rs  edge_cases.rs  event_bus.rs  introspection.rs  macro_dep_handlers.rs  metrics.rs  middleware.rs  named_subscriptions.rs  once.rs  panic_safety.rs  priority.rs  proptest_dispatch.proptest-regressions  proptest_dispatch.rs  retry.rs  semaphore.rs  shutdown.rs  snapshot.rs  stress.rs  subscription_guard.rs  test_utils.rs  trace_propagation.rs  unsubscribe.rs
(+14 files in other folders)
