[package]
name = "jaeb"
version = "0.3.1"
edition = "2024"
authors = ["linket <t.linke@pripares.com>"]
description = "simple snapshot-driven event bus"
license = "MIT"
repository = "https://github.com/LinkeTh/jaeb"
keywords = ["event-bus", "tokio", "async", "pubsub", "snapshot"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.88"

[lib]
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "examples/jaeb-demo",
    "examples/summer-jaeb-demo",
    "examples/basic-pubsub",
    "examples/sync-handler",
    "examples/closure-handlers",
    "examples/subscription-lifecycle",
    "examples/fire-once",
    "examples/retry-strategies",
    "examples/dead-letters",
    "examples/panic-safety",
    "examples/middleware",
    "examples/backpressure",
    "examples/graceful-shutdown",
    "examples/concurrency-limit",
    "examples/introspection",
    "examples/jaeb-visualizer",
    "summer-jaeb-macros",
    "summer-jaeb",
]
[dependencies]
arc-swap = "1.7"
metrics = { version = "0.24", optional = true }
tokio = { version = "1.51", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
tracing = { version = "0.1", features = ["std", "log"] }

[features]
default = []
metrics = ["dep:metrics"]
test-utils = []

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1.51", features = ["full", "test-util"] }

[[bench]]
name = "throughput"
harness = false
