[package]
name = "jaeb"
version = "0.5.0"
edition = "2024"
authors = ["linket <t.linke@pripares.com>"]
description = "simple snapshot-driven event bus"
license = "MIT"
repository = "https://github.com/LinkeTh/jaeb"
keywords = ["event-bus", "tokio", "async", "pubsub", "snapshot"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.94"

[lib]
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "jaeb-macros",
    "examples/jaeb-demo",
    "examples/summer-jaeb-demo",
    "examples/basic-pubsub",
    "examples/sync-handler",
    "examples/closure-handlers",
    "examples/subscription-lifecycle",
    "examples/retry-strategies",
    "examples/dead-letters",
    "examples/panic-safety",
    "examples/middleware",
    "examples/graceful-shutdown",
    "examples/concurrency-limit",
    "examples/introspection",
    "examples/macro-handlers",
    "examples/jaeb-visualizer",
    "examples/axum-integration",
    "examples/axum-integration-macros",
    "examples/observability-stack",
    "summer-jaeb-macros",
    "summer-jaeb",
]
[dependencies]
arc-swap = "1.9"
jaeb-macros = { version = "0.4.0", path = "jaeb-macros", optional = true }
metrics = { version = "0.24", optional = true }
tokio = { version = "1.51", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tracing = { version = "0.1", features = ["std", "log"], optional = true }

[features]
default = []
macros = ["dep:jaeb-macros"]
metrics = ["dep:metrics"]
test-utils = []
trace = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1.51", features = ["full", "test-util"] }
metrics-util = { version = "0.20", default-features = false, features = ["debugging"] }
proptest = "1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[[test]]
name = "macro_dep_handlers"
required-features = ["macros"]
