[package]
name = "jaeb-macros"
version = "0.1.0"
edition = "2024"
authors = ["linket <t.linke@pripares.com>"]
description = "simple actor based event bus"
license = "MIT"
repository = "https://github.com/LinkeTh/jaeb"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
