[package]
name = "summer-jaeb-macros"
version = "0.3.0"
edition = "2024"
authors = ["linket <t.linke@pripares.com>"]
description = "Proc macros for summer-jaeb event listener auto-registration"
license = "MIT"
repository = "https://github.com/LinkeTh/jaeb"
readme = "README.md"
rust-version = "1.94"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
