[package]
name = "summer-jaeb"
version = "0.1.3"
edition = "2024"
authors = ["linket <t.linke@pripares.com>"]
description = "summer-rs plugin for the jaeb actor-based event bus"
license = "MIT"
repository = "https://github.com/LinkeTh/jaeb"
readme = "README.md"
keywords = ["event-bus", "actor", "tokio", "summer", "pubsub"]
categories = ["asynchronous", "concurrency", "web-programming"]
rust-version = "1.88"

[features]
default = []
metrics = ["jaeb/metrics"]

[dependencies]
jaeb = { version = "0.2.3", path = ".." }
summer-jaeb-macros = { version = "0.1.3", path = "../summer-jaeb-macros" }
summer = "0.5"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
schemars = "1"
tracing = { version = "0.1", features = ["std", "log"] }

[dev-dependencies]
serde_json = "1"
trybuild = "1"
