[package]
name = "axum-integration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
jaeb = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
