[package]
name = "jaeb-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
jaeb = { path = "../..", features = ["metrics"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
metrics-exporter-prometheus = { version = "0.17.2", features = ["uds-listener"] }
metrics-util = "0.20.0"
tracing = { version = "0.1", features = ["std", "log"] }
