[package]
name = "jaeb-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
jaeb = { path = "../..", features = ["metrics"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
metrics-exporter-prometheus = { version = "0.18", features = ["uds-listener"] }
metrics-util = "0.20"
tracing = { version = "0.1", features = ["std", "log"] }
