[package]
name = "observability-stack"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# ── jaeb ────────────────────────────────────────────────────────────────
jaeb = { path = "../..", features = ["metrics", "trace"] }

# ── async runtime ────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── metrics (Prometheus pull endpoint) ───────────────────────────────────
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
metrics-util = "0.20"

# ── tracing core ─────────────────────────────────────────────────────────
tracing = { version = "0.1", features = ["std", "log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# ── OpenTelemetry / Tempo (0.31.x alignment) ─────────────────────────────
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-appender-tracing = "0.31"
opentelemetry-appender-log = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "logs"] }
tracing-opentelemetry = "0.32"

# ── utilities ─────────────────────────────────────────────────────────────
rand = "0.10.1"
uuid = { version = "1", features = ["v4"] }
url = "2"
