[package]
name = "summer-jaeb-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
summer-jaeb = { path = "../../summer-jaeb" }
jaeb = { path = "../.." }
summer = "0.5"
summer-web = { version = "0.5", features = ["openapi", "openapi-scalar"] }
serde = { version = "1", features = ["derive"] }
schemars = "1.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["std", "log"] }
